Updated HW assignment1

--- a/assignment_1.html
+++ b/assignment_1.html
@@ -1,2 +1,36 @@
 <!DOCTYPE html>
-Henry Nichols
+<html lang="en">
+    <head>
+        <title>Neon Design Inc</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="File Structure Worksheet">
+        <meta name="keywords" content="File Structure, File Path">
+        <meta name="author" content="H. Nichols">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+
+    <body>
+        <header>
+            <h1>Mission Statement</h1>
+            <p>Our mission is to provide you with a unique, unforgettable customer experience. All of our RGB designs are original and never replicated. We guarantee that your office or game room will leave you feeling inspired, comfortable, and energetic each time you enter.   
+            </p>       
+        </header>
+        
+        <img src="img/lights.jpg" alt="RGB Desktop" width=500/>
+        <h2>Company Goals</h2>
+        <ol>
+            <li>Create an exciting and memorable experience tailored to each customer.</li>
+            <li>Design an RGB workspace unique to your personality and wants.</li>
+            <li>Turn RGB dreams into reality.</li>
+        </ol>
+        <h2>Inspiration for this Site</h2>
+        <p>At one point in time, desk lamps were the pinnacle of office lighting. But then, the designers at <a href="https://razer.com/store">Razer</a> decided to take things to the next level as they introduced RGB into all of their tech designs. On their site, you will find a dark atmosphere where they are able to highlight the amazing features of RGB lighting. This is where I found inspiration to bring you Neon Design Inc.
+        </p>
+        <a href="https://razer.com/store">
+        <img src="img/razersite.png" alt="razer" width=500/>
+        </a>
+        <footer>
+            
+        </footer>
+    </body>
+</html>
